# lazycf

./: .gitignore  Cargo.toml  IMPLEMENTACION_OAUTH.md  LICENSE  README.md  skills-lock.json
.github/workflows/: release.yml
npm/: README.md  install.js  package.json
src/: action.rs  app.rs  browser.rs  config.rs  event.rs  main.rs  oauth.rs  secrets.rs  tui.rs
src/api/: client.rs  d1.rs  dns.rs  mod.rs  queues.rs  r2.rs  tunnels.rs  workers.rs
src/app/: d1.rs  dns.rs  mod.rs  queues.rs  r2.rs  tunnels.rs  workers.rs
src/components/: command_bar.rs  config.rs  d1.rs  detail.rs  dns.rs  input.rs  mod.rs  popup.rs  queues.rs  r2.rs  sidebar.rs  tunnels.rs  welcome.rs  workers.rs
src/model/: mod.rs
src/ui/: layout.rs  mod.rs  theme.rs  widgets.rs
