[package]
name = "lazycf"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.32"
keyring = "4.1.2"
open = "5.3.6"
ratatui = "0.30.2"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "http2", "charset", "query", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
